Fixed FFT_double_pend_prac name

--- a/results/plots/FFT_double_pend_prac.tex
+++ b/results/plots/FFT_double_pend_prac.tex
@@ -33,5 +33,5 @@
     \end{tikzpicture} 
     
     \caption{FFT amplitude spectrum}
-    \label{fig:FFT_double_pend}
+    \label{fig:FFT_double_pend_prac}
 \end{subfigure}
