--- a/results/results.tex
+++ b/results/results.tex
@@ -174,7 +174,7 @@
                 \captionsetup[subfigure]{justification=centering}
                 \centering
                 \input{results/plots/FFT_vel_step_double_pend.tex} % subfigure
-                \input{results/plots/FFT_double_pend.tex} % subfigure
+                \input{results/plots/FFT_double_pend_prac.tex} % subfigure
                 \caption{Data from a velocity step response with a dynamic payload 
                 ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}).}
                 \label{fig:FFT_double_pend_prac_subfigs}  
@@ -184,7 +184,7 @@
             Figure~\ref{fig:FFT_vel_step_double_pend} shows a snapshot of payload angle data from a practical flight with a dynamic payload.
             Two superimposed frequencies clearly visible in the oscillations due to the double pendulum action of the elongated pendulum.
             Two peaks corresponding to these two frequencies can be identified 
-            from the resulting FFT amplitude spectrum in Figure~\ref{fig:FFT_double_pend}.
+            from the resulting FFT amplitude spectrum in Figure~\ref{fig:FFT_double_pend_prac}.
             The cable length estimation uses the frequency of the dominant peak 
             and calculates the effective length corresponding to that frequency.
             This models a simple pendulum plant that best matches the dynamic payload oscillations. 
