Plots with wind redone from matlab and DMD changed to DMDc

--- a/results/plots/FFT_vel_step_double_pend.tex
+++ b/results/plots/FFT_vel_step_double_pend.tex
@@ -34,6 +34,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Payload angle data from velocity response}
+    \caption{Measured payload angle data}
     \label{fig:FFT_vel_step_double_pend}
 \end{subfigure}
