--- a/results/plots/prac_pediction_double_pend_vel_black.tex
+++ b/results/plots/prac_pediction_double_pend_vel_black.tex
@@ -33,7 +33,7 @@
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = vel_hat, col sep = comma] 
         {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
-        \addlegendentry{DMD prediction}
+        \addlegendentry{DMDc prediction}
 
         % \addplot+[mark = none, style = solid, ultra thick] 
         % table[x = time, y = theta, col sep = comma] 
