--- a/results/plots/prac_pediction_single_pend_theta_black.tex
+++ b/results/plots/prac_pediction_single_pend_theta_black.tex
@@ -33,7 +33,7 @@
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = theta_hat, col sep = comma] 
         {results/csv/step_predictions_Prac_2021-08-20_02_l-2_mp-0.3-wind-0.5.csv_dmd_737.csv};
-        \addlegendentry{DMD prediction}
+        \addlegendentry{DMDc prediction}
 
         \end{axis}
     \end{tikzpicture} 
