--- a/results/plots/prac_pediction_single_pend_vel_black.tex
+++ b/results/plots/prac_pediction_single_pend_vel_black.tex
@@ -33,12 +33,12 @@
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = vel_hat, col sep = comma] 
         {results/csv/step_predictions_Prac_2021-08-20_02_l-2_mp-0.3-wind-0.5.csv_dmd_737.csv};
-        \addlegendentry{DMD prediction}
+        \addlegendentry{DMDc prediction}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Model predictions of practical flight data with an suspended payload for a North velocity step input
+    \caption{Model predictions of practical flight data with a suspended payload for a North velocity step input
         ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}, wind speed $\approx~$\SI{0.5}{\metre/\second})}
     \label{fig:prac_pediction_single_pend_vel_black}
 \end{figure}
