--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -352,7 +352,7 @@
         \input{system_id/plots/MAE_vs_Ts_vs_L.tex}
 
         \paragraph
-        Figure~\ref{fig:MAE_vs_Ts_vs_L} shows the prediction error of different \gls{DMD} models 
+        Figure~\ref{fig:MAE_vs_Ts_vs_L} shows the prediction error of different \gls{DMDc} models 
         generated with a range of different sample times.
         The natural frequency of the payload pendulum is dependant on the cable length 
         and influences the frequency response of the plant.
