--- a/system_id/plots/prediction_double_pend_white.tex
+++ b/system_id/plots/prediction_double_pend_white.tex
@@ -33,7 +33,7 @@
         % \addplot+[mark = none, style = dashed, ultra thick] 
         % table[x = time, y = theta_dmd, col sep = comma] 
         % {system_id/csv/single_step_predictions_SITL_single_vel_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
-        % \addlegendentry{DMD}
+        % \addlegendentry{DMDc}
 
         % \addplot+[mark = none, style = dashed, ultra thick] 
         % table[x = time, y = theta_havok, col sep = comma] 
