--- a/system_id/plots/prediction_single_pend_black.tex
+++ b/system_id/plots/prediction_single_pend_black.tex
@@ -33,7 +33,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = theta_dmd, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
-        \addlegendentry{DMD}
+        \addlegendentry{DMDc}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = theta_havok, col sep = comma] 
