--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -43,7 +43,7 @@
         Therefore the data-driven approach provides a more general system identification method 
         that can be used for a range of different suspended payloads without being redesigned for specific dynamics.
 
-        % \gls{DMD} and \gls{HAVOK} work very similarly with single pend.
+        % \gls{DMDc} and \gls{HAVOK} work very similarly with single pend.
         % \gls{HAVOK} has slightly better prediction accuracy, but this small difference has neglible effect on control.
         % It is difficult to compare the white-box to the black-box models because the real effect will only be seen during control.
         % However it is clear that the accuracy of the white-box model degrades significantly 
