--- a/results/plots/havok_vs_dmd_Ttrain_2mps.tex
+++ b/results/plots/havok_vs_dmd_Ttrain_2mps.tex
@@ -6,8 +6,8 @@
             ylabel = $\overline{NMAE}$ \phantom{~},
             x unit = \si{\second},
             y unit = \%,
-            xmin = 5,     xmax = 120,
-            ymin = 3.2,  ymax = 15,
+            xmin = 5,  xmax = 120,
+            ymin = 2,  ymax = 18,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -28,17 +28,27 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {results/csv/NMAE_vs_Ntrain_Prac_2021-08-12_03_manual_x_vel_steps_2mps.csv_dmd_angle.csv};
-        \addlegendentry{DMD}
+        \addlegendentry{DMDc, wind speed $\approx~$\SI{2}{\metre/\second}}
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {results/csv/NMAE_vs_Ntrain_Prac_2021-08-12_03_manual_x_vel_steps_2mps.csv_havok_angle.csv};
-        \addlegendentry{HAVOK}
+        \addlegendentry{HAVOK, wind speed $\approx~$\SI{2}{\metre/\second}}
+
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
+        {results/csv/NMAE_vs_Ntrain_Prac_2021-08-26_01_l-1_mp-0.2_wind-6.csv_dmd_angle.csv};
+        \addlegendentry{DMDc, wind speed $\approx~$\SI{6}{\metre/\second}}
+
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
+        {results/csv/NMAE_vs_Ntrain_Prac_2021-08-26_01_l-1_mp-0.2_wind-6.csv_havok_angle.csv};
+        \addlegendentry{HAVOK, wind speed $\approx~$\SI{6}{\metre/\second}}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMD} and \gls{HAVOK} prediction errors for different lengths of practical training data
+    \caption{\gls{DMDc} and \gls{HAVOK} prediction errors for different lengths of practical training data
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:havok_vs_dmd_Ttrain_2mps}
 \end{figure}
