--- a/results/plots/havok_vs_dmd_q_2mps.tex
+++ b/results/plots/havok_vs_dmd_q_2mps.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {results/csv/NMAE_vs_q_Prac_2021-08-12_03_manual_x_vel_steps_2mps_q.csv_dmd_angle.csv};
-        \addlegendentry{DMD}
+        \addlegendentry{DMDc}
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
@@ -38,7 +38,7 @@
         % \addplot+[mark = none, style = solid, ultra thick] 
         % table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         % {results/csv/NMAE_vs_q_Prac_2021-08-20_03_l-1_mp-0.2_wind-0.5_q.csv_dmd_angle.csv};
-        % \addlegendentry{DMD}
+        % \addlegendentry{DMDc}
 
         % \addplot+[mark = none, style = solid, ultra thick] 
         % table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
@@ -49,7 +49,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMD} and \gls{HAVOK} prediction errors for different number of delays included in the model
+    \caption{\gls{DMDc} and \gls{HAVOK} prediction errors for different number of delays included in the model
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}, wind speed $\approx~$\SI{2}{\metre/\second}).}
     \label{fig:havok_vs_dmd_q_2mps}
 \end{figure}
