--- a/results/plots/prac_pediction_xy_theta_x.tex
+++ b/results/plots/prac_pediction_xy_theta_x.tex
@@ -33,7 +33,7 @@
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = theta_x_hat, col sep = comma] 
         {results/csv/step_predictions_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv_dmd_746.csv};
-        \addlegendentry{DMD prediction}
+        \addlegendentry{DMDc prediction}
 
         \end{axis}
     \end{tikzpicture} 
