--- a/system_id/plots/MAE_vs_Ts_vs_L.tex
+++ b/system_id/plots/MAE_vs_Ts_vs_L.tex
@@ -48,7 +48,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMD} prediction error using different cable lengths with a range of different sample times of noisy training data
+    \caption{\gls{DMDc} prediction error using different cable lengths with a range of different sample times of noisy training data
     ($m_p =$~\SI{0.2}{\kilo\gram})}
     \label{fig:MAE_vs_Ts_vs_L}
 \end{figure}
