--- a/system_id/plots/MAE_vs_q.tex
+++ b/system_id/plots/MAE_vs_q.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_dmd_angle_Ttrain_60.csv};
-        \addlegendentry{DMD}
+        \addlegendentry{DMDc}
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMD} and \gls{HAVOK} predictions error for different lengths of noisy training data
+    \caption{\gls{DMDc} and \gls{HAVOK} predictions error for different lengths of noisy training data
     ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
     \label{fig:NMAE_vs_q}
 \end{figure}
