--- a/system_id/plots/MAE_vs_q_double_pend.tex
+++ b/system_id/plots/MAE_vs_q_double_pend.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_q_SITL_x_vel_noise_m1_0.2_l1_m2_0.1_l2_0.3_Train_70.csv_dmd_angle.csv};
-        \addlegendentry{DMD}
+        \addlegendentry{DMDc}
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{\gls{DMD} and \gls{HAVOK} predictions error of double pendulum for different numbers of delay-coordinates
+    \caption{\gls{DMDc} and \gls{HAVOK} predictions error of double pendulum for different numbers of delay-coordinates
     ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{1}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.3}{\meter} $T_{train} =$~\SI{70}{\second}.)}
     \label{fig:MAE_vs_q_double_pend}
 \end{figure}
