--- a/results/plots/training_data_theta_prac.tex
+++ b/results/plots/training_data_theta_prac.tex
@@ -1,13 +1,13 @@
-\begin{figure}[!htb]
+\begin{subfigure}[t]{\columnwidth}
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Time,
-            ylabel = North velocity,
+            ylabel = Payload angle,
             x unit = \si{\second},
-            y unit = \si{\metre/\second},
-            xmin = 0,   xmax = 200,
-            ymin = -2.5,  ymax = 2.5,
+            y unit = \si{\radian},
+            xmin = 0,   xmax = 75,
+            ymin = -20,  ymax = 20,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -16,7 +16,7 @@
             label style = {font = \scriptsize},
             tick label style = {font = \scriptsize},
             width = 0.95\columnwidth,
-            height = 0.5\columnwidth,
+            height = 0.3\columnwidth,
             % initialize Dark2
             cycle list/Dark2,
             % combine it with 'mark list*':
@@ -24,21 +24,22 @@
                 Dark2\nextlist
             }
         ]
-        
+        \pgfplotsset{cycle list shift=1}
+
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = vel_sp, col sep = comma] 
-        {system_id/csv/training_data_SITL_x_vel_noise_l1_m0-2.csv.csv};
-        \addlegendentry{$V_{N,sp}$}
+        table[x = time, y = theta.x, col sep = comma] 
+        {results/csv/training_data_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv.csv};
+        \addlegendentry{$\theta_N$}
         
+        \pgfplotsset{cycle list shift=1}
+
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = vel, col sep = comma] 
-        {system_id/csv/training_data_SITL_x_vel_noise_l1_m0-2.csv.csv};
-        \addlegendentry{$V_N$}
+        table[x = time, y = theta.y, col sep = comma] 
+        {results/csv/training_data_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv.csv};
+        \addlegendentry{$\theta_E$}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Example of training data with random velocity step inputs
-        ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter})}
-    \label{fig:training_data}
-\end{figure}
+    \label{fig:training_data_theta_prac}
+\end{subfigure}
