--- a/results/results.tex
+++ b/results/results.tex
@@ -211,57 +211,51 @@
         Therefore the data-driven algorithms will be applied to practical flight data in this chapter 
         to investigate their performance in a practical implementation.
 
-        \FloatBarrier\subsection{Length of training data} \label{sec:length_train_data_prac}
+        \FloatBarrier\subsection{Wind disturbance} \label{sec:length_train_data_prac}
 
             \paragraph
-            As discussed in Section~\ref{sec:sys_id_length_of_data}, 
-            the length of training data used in a model has a large effect on prediction accuracy.
-            The length of training data required for accurate models is largely influenced by the amount of wind disturbance during flight.
-            Figure~\ref{fig:wind_Ttrain} shows prediction error as a function of training data length for different wind conditions.
-            Wind conditions are referenced here by the wind speed recorded by the website, www.yr.no, 
-            for the hour of day of the flight.
-            Its clear that the prediction error decreases with increasing wind speeds.
-            It appears that for wind speeds lower than \SI{2}{\metre/\second}, 
-            the minimum prediction error is not significantly improved with decreasing wind speeds.
-            This may be because the flight dynamics is not significantly affected at such low wind speeds.
-            
+            The wind conditions during practical flights have a large influence on the quality of the flight data gathered.
+            Wind adds an unmeasured disturbance (also referred to as process noise) 
+            to the considered system which is detrimental to system identification.
+            This disturbance consists of a randomly fluctuating force
+            applied to the vehicle, cable and payload.
+            The mean force applied to the multirotor by the wind
+            affects the mean offset in acceleration setpoint data 
+            because the velocity controller integrators compensates for the disturbance.
+            The mean offset is subtracted from the acceleration setpoint data, 
+            which results in a signal with a zero mean which is used for system identification.
+            This accounts for the mean force applied the wind.
+            % ??  As shown in Figure~\ref{fig:}, this greatly reduces the prediction error.
+            However, the wind speed also fluctuates from the mean randomly.
+            This results in random process noise in the plant which cannot easily be removed from the measured data.
+
+            % ?? Shows plot of data with high wind and low wind
+
             \input{results/plots/wind_Ttrain.tex}
 
             \paragraph
-            Wind adds an unmeasured disturbance (also referred to as process noise) to the plant which is not accounted for in the model.
-            This disturbance consists of a mean force and random fluctuations in the force, 
-            which are applied to the vehicle, cable and payload.
-            The mean force applied to the multirotor 
-            results in a constant offset in the acceleration setpoint data 
-            as the velocity controller integrators compensates for the disturbance.
-            For system identification, the constant offset is subtracted from the acceleration setpoint data, 
-            which results in a signal with a zero mean.
-            This accounts for the constant component in the acceleration setpoint signal required to counteract the mean force of the wind.
-            % ??  As shown in Figure~\ref{fig:}, this greatly reduces the prediction error.
-            However, the wind speed also deviates randomly from the mean speed.
-            This results in random process noise in the plant which is not removed from the measured data.
-
-            % \paragraph
-            % It appears that for higher wind speeds, 
-            % the prediction error does not reach a peak value within the considered range of training data lengths.
-            
-            % This is expected, since the algorithms require longer lengths of training data to  
-            
-            
-            
-            \paragraph
-            Figure~\ref{fig:havok_vs_dmd_Ttrain_2mps} compares the prediction error of \gls{DMDc} and \gls{HAVOK} models 
-            as a function of length of training data.
-            It is evident that the two techniques produce similar prediction errors with practical data.
-            In Chapter~\ref{chap:system_id} it was shown with simulation data 
-            that \gls{HAVOK} produces slightly lower prediction errors thatn \gls{DMDc}.
-            Figure~\ref{fig:havok_vs_dmd_Ttrain_2mps} comfirms this observation for practical data.
-            However, this error difference is very small 
-            and will probably not effect the performance of the controllers using these models.
+            Figure~\ref{fig:wind_Ttrain} shows prediction error as a function of training data length for data with different wind conditions.
+            Wind conditions are referenced here by the wind speed recorded by the website, www.yr.no, 
+            for the hour of day of the flight.
+            From this plot shows that the minimum prediction error decreases with decreasing wind speeds.
+            This is expected, since lower wind speeds correspond to less process noise 
+            which is benificial for system identifcation.
+            Note that the prediction error corresponding to \SI{6}{\metre/\second} winds does not vary much with length of training data.
+            % This may be because the unmeasured wind disturbance dominates the flight dynamics such the data-driven algorithms cannot identify a representative model with any length of training data. 
+            The prediction error at this wind speed is significantly large 
+            and a model generated from such data will probably not be useful for control.
+            %  ?? Figure of prediction with wind clearly shows that the prediction model does not represent the actual flight dynamics.
 
             \input{results/plots/havok_vs_dmd_Ttrain_2mps.tex}
 
-            Also plot \gls{DMDc} vs \gls{HAVOK} for high winds ??
+            \paragraph
+            Figure~\ref{fig:havok_vs_dmd_Ttrain_2mps} compares the prediction errors of \gls{DMDc} and \gls{HAVOK} models.
+            It is evident that the two techniques produce similar prediction errors for different wind conditions.
+            The difference in prediction error is very small 
+            and will probably not effect the performance of the controllers using these models.
+            This shows that the minor difference in the implementation of the algorithms has a negilible effect on the resultant models.
+            The \gls{DMDc} implementation is therefore prefered over \gls{HAVOK} due to a lower computational complexity.
+
             
         \FloatBarrier\subsection{Hyperparameters}
             
@@ -316,14 +310,21 @@
             \paragraph
             Figure~\ref{fig:prac_pediction_single_pend_theta_black} 
             shows the measured and predicted payload angle data of a suspended payload for a velocity step in a practical flight.
-            Note that the model was generated from training data but is tested with a separate set of previously unseen, testing data.
+            Note that the model is generated from training data and is tested with a separate set of previously unseen, testing data.
             Figure~\ref{fig:prac_pediction_single_pend_theta_black} plots the state prediction against testing data.
-            For each prediction run, the model starts with an initial condition, $\bm{x}_{0}$.
-            The state vector of each future time-step, $\bm{x}_{k+1}$, 
-            is propogated from the previous state vector, $\bm{x}_{k}$, 
-            and the input vector logged for that time-step, $\bm{u}_{k}$.
-            Each of these time-step predictions results in a small error which accumulates as the prediction horizon increases.
-            Therefore the prediction error increases as time progresses, as shown in Figure~\ref{fig:prac_pediction_single_pend_theta_black}.
+            Recall from Section~\ref{sec:dmdc} that \gls{DMDc} produces a discrete, state-space model in the form:
+            \begin{equation}
+                \bm{x}_{k+1} = \bm{A} \bm{x}_k + \bm{A}_d \bm{d}_k + \bm{B} \bm{u}_k .
+            \end{equation}
+            The state prediction starts at the initial condition, $\bm{x}_0$ and $\bm{d}_0$,
+            and predicts the state vector for each succesive time-step, $\bm{x}_{k+1}$, 
+            from the state vector, $\bm{x}_{k}$,
+            delay vector, $\bm{d}_{k}$
+            and input vector, $\bm{u}_{k}$
+            at the previous time-step.
+            Each of these time-step predictions results in a small error which accumulates with each succesive prediction.
+            Therefore the prediction error increases as the prediction horizon increases, 
+            as shown in Figure~\ref{fig:prac_pediction_single_pend_theta_black}.
 
             \input{results/plots/prac_pediction_single_pend_theta_black.tex}
 
@@ -348,10 +349,46 @@
         \FloatBarrier\subsection{Extended dimensions}
 
             \paragraph
-            This method can easily be extended to damp the swing angle in both the $x$ and $y$ directions.
-            Show new control vector and new state vector.
-            Talk about steps given.
-            Figure~\ref{fig:xy_predictions} \gls{DMDc} predictions
+            Since the data-driven methods are only dependant on the input and output data used,
+            the prediction model can be easily extended to include more dimentions by adding more state measurement variables.
+            In this section, a prediction model is generated and discussed 
+            which includes both the North and East axes dynamics.
+            Such a model could be used in a single \gls{MPC} velocity controller 
+            to damp the payload oscillations in both axis simulateously.
+
+            \paragraph
+            For this model, the new state vector is,
+            \begin{equation}
+                \bm{x} = \begin{bmatrix}
+                    V_N & V_E & \theta_N & \theta_E 
+                \end{bmatrix}^T ,
+            \end{equation}
+            and the corresponding input vector is,
+            \begin{equation}
+                \bm{u} = \begin{bmatrix}
+                    A_{N,sp} & A_{E,sp}
+                \end{bmatrix} .
+            \end{equation}
+            
+            \begin{figure}
+                \captionsetup[subfigure]{justification=centering}
+                \centering
+                \input{results/plots/training_data_vel_prac.tex} % subfigure
+                \input{results/plots/training_data_theta_prac.tex} % subfigure
+                \caption{Snapshot of training data with random velocity step inputs for the North and East axes
+                    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter})}
+                \label{fig:XY_train_data_subfigs}  
+            \end{figure}
+
+            \paragraph
+            To generate training data, random steps are commanded in the North and East axes simulateously 
+            to stimulate the dynamics in both axes. 
+            Figure~\ref{fig:XY_train_data_subfigs} shows an example of the practical training data used for this extended dimension model.
+            Clear oscillations in the payload angle and velocity response of both axes are visible. 
+            Figure~\ref{fig:xy_predictions} shows the state variable predictions of a \gls{DMDc} model 
+            build from the data in Figure~\ref{fig:XY_train_data_subfigs}.
+            It is clear that this model provides an accuarte prediction of each state variable considered.
+            This shows that the data-driven methods can be effectively extended to include both the North and East axes dynamics. 
 
             \begin{figure}
                 \captionsetup[subfigure]{justification=centering}
@@ -372,40 +409,55 @@
             As mentioned in Chapter~\ref{chap:system_id}, 
             one of the disadvantages of the white-box system identification approach
             is that it relies heavily on a priori modeling assumptions.
-            When a payload is attached that deviates from the white-box modelling assumptions, 
+            When a payload is attached to the multirotor that deviates from the white-box modelling assumptions, 
             the performance of the system identification method decreases.
-            However, the performance of the data-driven methods can handle this deviation
+            However, the data-driven methods can handle this deviation
             because it does not rely on these assumptions.
-
-            \paragraph
-            One of the main assumptions of the white-box model considered in Section~\ref{sec:param_estimation},
-            is that the suspended payload is a point mass.
-            This reduced the considered suspended payload system to a simple pendulum.
-            Figure~\ref{fig:practical_double_pendulum} shows a practical dynamic payload 
-            which deviates significantly from this assumption.
-            It shows a photo of an elongated payload 
-            suspended from Honeybee during a practical flight.
-            The mass distribution causes a relative rotation of the payload with respect to the suspended cable,
-            which significantly affects the flight dynamics.
-
+                        
             \begin{figure}[!htb]
                 \centering
                 \includegraphics[width=0.6\linewidth]{practical_double_pendulum_2.jpg}
                 \caption{Practical flight with an suspended elongated payload attached to Honeybee}
                 \label{fig:practical_double_pendulum}
-            \end{figure}
+            \end{figure}     
 
             \paragraph
-            Theta prediction.
+            One of the a prioir modelling assumptions mentioned in Section~\ref{sec:param_estimation},
+            is that the suspended payload is a point mass.
+            This reduced the considered suspended payload system to a simple pendulum in the white-box model.
+            Figure~\ref{fig:practical_double_pendulum} shows a photo of an elongated payload 
+            suspended from Honeybee during a practical flight
+            This is a practical example of a dynamic payload 
+            which deviates significantly from the point mass assumption.
+            The mass distribution causes a relative rotation of the payload with respect to the suspended cable,
+            which significantly affects the flight dynamics.
 
             \input{results/plots/prac_pediction_double_pend_theta_black.tex}
+
+            \paragraph
+            Figure~\ref{fig:prac_pediction_double_pend_theta_black} shows the measured and predicted payload angle
+            of the practical dynamic payload.
+            The irregular oscillations due to the double pendulum action of an elongated payload is clearly seen in the angle data.
+            It appears that the prediction differs slightly from the measurement data at the peaks, 
+            however this does not appear to be a significant error.
+            Overall, it is clear that the \gls{DMDc} model captures the multi-frequency oscillations of the dynamic payload well.
+
+            \input{results/plots/prac_pediction_double_pend_vel_black.tex}
             
             \paragraph
-            Vel prediction.
-            Note that the prediction is propagated from an initial condition and the given input data only.
+            Figure~\ref{fig:prac_pediction_double_pend_vel_black} shows the measured and predicted velocity of the same flight.
+            The superimposed frequencies are not as visible in the velocity oscillations as they were in the payload angle data.
+            However these oscillations in the velocity response 
+            still appear irregular compared to the simple payload data shown in Figure~\ref{fig:prac_pediction_single_pend_vel_black}.
+            In Figure~\ref{fig:prac_pediction_double_pend_vel_black}, 
+            the size of the velocity prediction deviates from the measurement data at the velocity overshoot.
+            However, this error does not appear significant enough to affect the corresponding \gls{MPC} controller using this model.
+            The shape of the velocity oscillations also appear to be captured well in the prediction.
+            Recall that the prediction is propagated from an initial condition and the given input data only.
             The model does not use state measurements to readjust after the initial condition is taken.
-            Because the model prediction matches the practical testing data so closely,
-            it is expected that this model can effectively be used for a practical \gls{MPC} implementation. 
+            Therefore a accumulation in prediction error is expected as the prediction horizon increases.
+            Because the model prediction matches the shape of the practical testing data so closely,
+            it is expected that this model can be used for a practical \gls{MPC} implementation on practical data. 
 
             % As discussed in Chapter~\ref{chap:control_systems}, 
             % this prediction model can be used in an \gls{MPC} to optimise the control input to actively damp the payload swing angles.
@@ -413,24 +465,6 @@
             % has a direct impact on the performance of the controller.
             % Because the model prediction matches the practical testing data so closely,
             % it is expected that this model will 
-
-            \input{results/plots/prac_pediction_double_pend_vel_black.tex}
-            
-            \paragraph
-            Double pendulum: 
-            \begin{itemize}
-                \item Plot theta
-                \item Plot velocity
-                \item Plot theta prediction of white-box model
-            \end{itemize}
-            
-        % \FloatBarrier\subsection{Extended dimensions}
-        %     \begin{itemize}
-        %         \item plot error vs T-train for XY
-        %         \item plot predictions
-        %         \item plot error vs T-train for XYZ
-        %     \end{itemize}
-        %     Maybe add this is there is time??
             
     \FloatBarrier\section{Swing damping control systems}
 
@@ -440,13 +474,13 @@
         The control architectures are summarised in Table~\ref{tbl:controller_summary} 
         by pairing the system identification techniques along with the appropriate controllers.
         It was firstly shown in Chapter~\ref{chap:system_id} that the system identifcation techniques worked in simulation.
-        Emphasise that control is now applied in full \gls{SITL} simulation.
+        Emphasise that control is now applied in a full \gls{SITL} simulation.
 
         \paragraph
         MATLAB is used to generate a \gls{MPC} \gls{ROS} node 
         This \gls{ROS} node receives state feedback from the Gazebo simulator,
         computes the optimal control action,
-        and send the setpoint to PX4 through the package 'mavros'.
+        and sends the setpoint to PX4 through the package 'mavros'.
 
         \begin{table}[!h]
             \renewcommand{\arraystretch}{1.1}
