--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -30,13 +30,30 @@
         These parameters are first estimated and then inserted into the predefined, linearised model.
         This model is used by a \gls{LQR} controller to damp swing angles while also controlling the vehicle.
 
+        \paragraph
+        The main advantage of this approach is its simplicity.
+        In the case considered by \cite{Erasmus2020} and \cite{Slabber2020}, only two parameters are estimated.
+        In contrast, numerous values need to be estimated to reproduce the system dynamics with a black-box model.
+        Therefore, white-box system identification methods are often less computationally complex
+        and can easily be applied on low cost hardware.
+        Due to the lower complexity, 
+        paramater estimation algorithms often require shorter lengths of training data 
+        than data-driven methods to produce accurate models.
+
         \paragraph 
-        The approach works well for systems with predictable dynamics, but is not very adaptable to systems with slightly different dynamics.
-        The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass suspended from the mulitrotor by a non-stretching cable. 
-        In this configuration it was shown that a \gls{LQR} controller successfully controls a mulitrotor while minimising payload swing angles.
-        However, if a payload or cable is used that violates one of the modelling assumptions, the predefined model no longer accurately represent the system.
-        Many payloads which are considered for practical drone deliveries do not conform to these assumptions.
-        Since the controller is dependent on this model, the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
+        Therefore the white-box approach works well for systems with predictable physics, 
+        however is not very adaptable to systems that deviate from the predefined dynamics.
+        The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass 
+        suspended from the mulitrotor by a non-stretching cable. 
+        In this configuration it was shown that a \gls{LQR} controller 
+        successfully controls a mulitrotor and minimises the payload swing angles.
+        However, if a payload or cable is used that violates one of the modelling assumptions, 
+        the predefined model no longer accurately represents the system.
+        Many payloads considered for practical drone deliveries do not conform to these assumptions.
+        Since the controller is dependent on this model, 
+        the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
+        Therefore a new model and paramater estimation technique will need to be derived 
+        for every use case that deviates significantly from the a priori model.
 
     \subsection{Black-box techniques}
 
@@ -46,11 +63,33 @@
         % The user only considers what goes into, and comes out of, the black-box.
         % Something imagery about why it is called black box
         No prior knowledge of the physics of the system are considered and no modelling assumptions are made.
-        Black-box techniques determine the mathematical relationship between inputs and outputs of a system using information from measurement data only.
+        Black-box techniques determine the mathematical relationship between inputs and outputs of a system 
+        using information from measurement data only.
+
+        \paragraph
+        A disadvantage of the data-driven system identifcation approach is its computational complexity.
+        Data-driven algorithms generally have a much higher computational complexity than parameter estimation techniques.
+        This is expected since a lot more model paramater values are generated 
+        to populate a black-box model than a predefined white-box model.
+        In the multirotor use case, this may mean that more expensive computational hardware is required 
+        to implement a data-driven method compared to paramater estimation methods.
+        Also, most data-driven methods have hyperparameters that affect the performance of the method 
+        and need to be tuned for a specific use case.
+        This can be done automatically, but this process increases the computational demand on the hardware.
+        Furthermore, data-driven methods generally require more training data than paramater estimation methods.
+        This means that more flight time is wasted on system identification before an updated controller can be activated.
+        
+        \paragraph
+        However, black-box techniques are very adaptable 
+        and provide a general system identification solution for a broad range of different dynamics.
+        This is a major advantage over white-box system identification techniques, 
+        which need to be manually redesigned for different use cases.
+        Add more advantages ??
 
         \paragraph
         Dynamical models can be categorised as either non-linear or linear models.
-        Non-linear models are often more accurate than linear models because complex, real-world dynamics are better approximated by non-linear systems.
+        Non-linear models are often more accurate than linear models 
+        because real-world system mostly contain non-linear dynamics.
         The dynamics of a mulitrotor and suspended payload are also non-linear.
         % Examples of black box models with mulitrotors and payloads in literature ???
 
@@ -64,15 +103,14 @@
         
         \paragraph
         \gls{DMDc} and \gls{HAVOK} are the two data-driven system identification methods investigated in this work. 
-        These are linear regression techniques that produce linear models to approximate non-linear dynamics.
-        Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016a} may produce models that are more accurate than linear techniques, 
-        but at the cost of greater computational complexity.
+        These are linear regression techniques that produce linear models that approximate non-linear dynamics.
+        Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016a} 
+        may produce models that are more accurate than linear techniques.
+        However the gain in accuracy will be at the cost of a greater computational complexity.
         % \murray{Name more techniques ??}
-        \gls{DMDc} and \gls{HAVOK} are less computationally complex and their models are suitable for linear \gls{MPC}, which is significantly faster than non-linear \gls{MPC}.
+        \gls{DMDc} and \gls{HAVOK} are less computationally complex 
+        and their models are suitable for linear \gls{MPC}, 
+        which is significantly faster than non-linear \gls{MPC}.
         This is desirable for a practical mulitrotor implementation, where onboard computational power is limited.
-        These techniques and their implementations are explained in the sections below.
-        
-        % \paragraph
-        % Each technique is considered for use in a velocity controller in the North direction
 
-        % 
+    % \subsection{Comparison of the techniques} ??
